[package]
name = "suiforge"
version = "0.2.0"
edition = "2021"
authors = ["SuiForge Contributors"]
description = "A modern developer framework for Sui blockchain smart contracts with advanced tooling"
license = "MIT"
repository = "https://github.com/yourusername/suiforge"
keywords = ["sui", "blockchain", "move", "smart-contracts", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "suiforge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
handlebars = "5.1"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
which = "6.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.1"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
tabled = "0.15"
syntect = "5.1"
tree-sitter = "0.20"
petgraph = "0.6"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
